testCollectionProject/src/test/map/TestNested.java
package test.map;

public class TestNested {

	public static void main(String[] a) {
		// 내부 (Nested) 정적(static) 인터페이스 사용 테스트
		// 외부인터페이스명.내부인터페이스명 래퍼런스;
		FMap.FEntry entry;

		// Nested 클래스 | 인터페이슨느 단독 사용 못함
		//		FEntry ent; // error
	}

}
